fix: dashboard dropdown panes; fix: switcher extra margin

--- a/site/assets/src/scss/composition/switcher.scss
+++ b/site/assets/src/scss/composition/switcher.scss
@@ -4,6 +4,9 @@
   gap: spacing(1);
 
   @supports not (inset: 0) {
+    & {
+      margin: calc( spacing(0) * -1 )
+    }
     & > * {
       margin: spacing(0);
     }
